crates/nash-can/tests/snapshots/impls__reflexive_lift_accepts_big_and_const.snap
---
source: crates/nash-can/tests/impls.rs
description: "module Lift exposing (Lift)\ntrait Lift 'small 'big where\n    lift : 'small -> 'big\n    lower : 'big -> 'small\n\n\nmodule Main exposing (..)\nimport Lift exposing (Lift)\ntype Color = Red\ntrait Lift 'a 'a => RoundTrip 'a where\n    roundTrip : 'a -> 'a\nimpl RoundTrip Color where\n    roundTrip x = x\n\n\nmodule Main exposing (..)\nimport Lift exposing (Lift)\ntype Color = Red\ntrait Lift 'a 'a => RoundTrip 'a where\n    roundTrip : 'a -> 'a\nimpl RoundTrip () where\n    roundTrip x = x\n"
info: diagnostic
---
Case 1: accepted
Case 2: accepted
