crates/nash-can/tests/snapshots/impls__superclass_context_substitutes_higher_kinded_arguments.snap
---
source: crates/nash-can/tests/impls.rs
description: "module Main exposing (..)\ntype Wrap 'f 'a = Wrap ('f 'a)\ntrait Eq 'a where\n    eq : 'a -> 'a\ntrait Eq 'a => Ord 'a where\n    compare : 'a -> 'a\nimpl Eq ('f 'a) => Eq (Wrap 'f 'a) where\n    eq x = x\nimpl Eq ('f 'a) => Ord (Wrap 'f 'a) where\n    compare x = x\n"
---
[
    ImplKey {
        trait_: QualifiedName {
            home: ModuleName {
                package: None,
                name: "Main",
            },
            name: "Eq",
        },
        heads: [
            Named {
                reference: QualifiedName {
                    home: ModuleName {
                        package: None,
                        name: "Main",
                    },
                    name: "Wrap",
                },
                args: [
                    Var {
                        index: 0,
                        repr: ReprSet(
                            7,
                        ),
                    },
                    Var {
                        index: 1,
                        repr: ReprSet(
                            7,
                        ),
                    },
                ],
            },
        ],
    },
    ImplKey {
        trait_: QualifiedName {
            home: ModuleName {
                package: None,
                name: "Main",
            },
            name: "Ord",
        },
        heads: [
            Named {
                reference: QualifiedName {
                    home: ModuleName {
                        package: None,
                        name: "Main",
                    },
                    name: "Wrap",
                },
                args: [
                    Var {
                        index: 0,
                        repr: ReprSet(
                            7,
                        ),
                    },
                    Var {
                        index: 1,
                        repr: ReprSet(
                            7,
                        ),
                    },
                ],
            },
        ],
    },
]
