crates/nash-can/tests/snapshots/impls__superclass_impl_is_available_from_an_interface.snap
---
source: crates/nash-can/tests/impls.rs
expression: "result.tables.impls.keys().collect::<Vec<_>>()"
---
[
    ImplKey {
        trait_: QualifiedName {
            home: ModuleName {
                package: None,
                name: "Base",
            },
            name: "Eq",
        },
        heads: [
            Named {
                reference: QualifiedName {
                    home: ModuleName {
                        package: None,
                        name: "Base",
                    },
                    name: "Color",
                },
                args: [],
            },
        ],
        kinds: ValueKinds {
            bounds: [],
            kinds: [],
            applications: [],
        },
    },
    ImplKey {
        trait_: QualifiedName {
            home: ModuleName {
                package: None,
                name: "Main",
            },
            name: "Ord",
        },
        heads: [
            Named {
                reference: QualifiedName {
                    home: ModuleName {
                        package: None,
                        name: "Base",
                    },
                    name: "Color",
                },
                args: [],
            },
        ],
        kinds: ValueKinds {
            bounds: [],
            kinds: [],
            applications: [],
        },
    },
]
