crates/nash-can/tests/snapshots/impls__superclass_impl_may_follow_its_use.snap
---
source: crates/nash-can/tests/impls.rs
expression: "result.tables.impls.keys().collect::<Vec<_>>()"
---
[
    ImplKey {
        trait_: QualifiedName {
            home: ModuleName {
                package: None,
                name: "Main",
            },
            name: "Eq",
        },
        heads: [
            Named(
                QualifiedName {
                    home: ModuleName {
                        package: None,
                        name: "Main",
                    },
                    name: "Color",
                },
            ),
        ],
    },
    ImplKey {
        trait_: QualifiedName {
            home: ModuleName {
                package: None,
                name: "Main",
            },
            name: "Ord",
        },
        heads: [
            Named(
                QualifiedName {
                    home: ModuleName {
                        package: None,
                        name: "Main",
                    },
                    name: "Color",
                },
            ),
        ],
    },
]
