crates/nash-can/tests/snapshots/impls__superclass_resolution_bounds_expanding_contexts.snap
---
source: crates/nash-can/tests/impls.rs
description: "module Main exposing (..)\ntrait Eq 'a where\n    eq : 'a -> 'a\ntrait Eq 'a => Ord 'a where\n    compare : 'a -> 'a\nimpl Eq (List (List 'a)) => Eq (List 'a) where\n    eq x = x\nimpl Ord (List 'a) where\n    compare x = x\n"
info: diagnostic
---
nash::names::missing_superclass

  × The `Main.Ord` impl for (Primitive.List 'a0) does not establish superclass 1:
   ╭─[src/Main.nash:8:1]
 7 │         eq x = x
 8 │ ╭─▶ impl Ord (List 'a) where
 9 │ ╰─▶     compare x = x
   ╰────
  help: It must also satisfy `Main.Eq (Primitive.List 'a)`. Resolving it exceeded the
        search limit because the requirements keep expanding. Add the required impl or
        include the necessary constraint in this impl's context.
